3187394: Fixes + adds color contrast to checkmarks on the select background color selector.

--- a/scss/themes/dialog/components/_off-canvas.base.scss
+++ b/scss/themes/dialog/components/_off-canvas.base.scss
@@ -3,14 +3,6 @@
  * Set base styles for the off-canvas dialog.
  */
 
-/* Set some global attributes. */
-*,
-*:not(div) {
-  color: $panel_text_color;
-  background: unset;
-  font-family: inherit;
-}
-
 /* Generic elements. */
 a,
 .link {
