--- a/scss/themes/plugins/_background-media.scss
+++ b/scss/themes/plugins/_background-media.scss
@@ -29,8 +29,12 @@
     background: #{$close_circle_icon} center center no-repeat $panel_bg_color;
     background-size: contain;
     text-shadow: none;
+    min-width: auto;
 
-    &:hover, &:focus {
+    &:hover,
+    &:focus {
+      background: #{$close_circle_icon} center center no-repeat $panel_bg_color;
+      background-size: contain;
       opacity: .7;
     }
 
